@@ -96,6 +96,7 @@ import static command_request.CommandRequestOuterClass.RequestType.LTrim;
 import static command_request.CommandRequestOuterClass.RequestType.MGet;
 import static command_request.CommandRequestOuterClass.RequestType.MSet;
 import static command_request.CommandRequestOuterClass.RequestType.MSetNX;
+import static command_request.CommandRequestOuterClass.RequestType.Migrate;
 import static command_request.CommandRequestOuterClass.RequestType.Move;
 import static command_request.CommandRequestOuterClass.RequestType.ObjectEncoding;
 import static command_request.CommandRequestOuterClass.RequestType.ObjectFreq;
@@ -104,7 +105,11 @@ import static command_request.CommandRequestOuterClass.RequestType.ObjectRefCoun
 import static command_request.CommandRequestOuterClass.RequestType.PExpire;
 import static command_request.CommandRequestOuterClass.RequestType.PExpireAt;
 import static command_request.CommandRequestOuterClass.RequestType.PExpireTime;
+import static command_request.CommandRequestOuterClass.RequestType.PSubscribe;
+import static command_request.CommandRequestOuterClass.RequestType.PSubscribeBlocking;
 import static command_request.CommandRequestOuterClass.RequestType.PTTL;
+import static command_request.CommandRequestOuterClass.RequestType.PUnsubscribe;
+import static command_request.CommandRequestOuterClass.RequestType.PUnsubscribeBlocking;
 import static command_request.CommandRequestOuterClass.RequestType.Persist;
 import static command_request.CommandRequestOuterClass.RequestType.PfAdd;
 import static command_request.CommandRequestOuterClass.RequestType.PfCount;
@@ -147,11 +152,16 @@ import static command_request.CommandRequestOuterClass.RequestType.SetRange;
 import static command_request.CommandRequestOuterClass.RequestType.Sort;
 import static command_request.CommandRequestOuterClass.RequestType.SortReadOnly;
 import static command_request.CommandRequestOuterClass.RequestType.Strlen;
+import static command_request.CommandRequestOuterClass.RequestType.Subscribe;
+import static command_request.CommandRequestOuterClass.RequestType.SubscribeBlocking;
 import static command_request.CommandRequestOuterClass.RequestType.TTL;
 import static command_request.CommandRequestOuterClass.RequestType.Touch;
 import static command_request.CommandRequestOuterClass.RequestType.Type;
 import static command_request.CommandRequestOuterClass.RequestType.Unlink;
+import static command_request.CommandRequestOuterClass.RequestType.Unsubscribe;
+import static command_request.CommandRequestOuterClass.RequestType.UnsubscribeBlocking;
 import static command_request.CommandRequestOuterClass.RequestType.Wait;
+import static command_request.CommandRequestOuterClass.RequestType.WaitAof;
 import static command_request.CommandRequestOuterClass.RequestType.Watch;
 import static command_request.CommandRequestOuterClass.RequestType.XAck;
 import static command_request.CommandRequestOuterClass.RequestType.XAdd;
@@ -254,6 +264,7 @@ import glide.api.models.commands.HashFieldExpirationConditionOptions;
 import glide.api.models.commands.LInsertOptions.InsertPosition;
 import glide.api.models.commands.LPosOptions;
 import glide.api.models.commands.ListDirection;
+import glide.api.models.commands.MigrateOptions;
 import glide.api.models.commands.RangeOptions;
 import glide.api.models.commands.RangeOptions.LexRange;
 import glide.api.models.commands.RangeOptions.RangeQuery;
@@ -317,9 +328,9 @@ import glide.managers.ConnectionManager;
 import glide.utils.ArgsBuilder;
 import glide.utils.BufferUtils;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.EnumSet;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -375,7 +386,7 @@ public abstract class BaseClient
     public static final String LCS_MATCHES_RESULT_KEY = "matches";
 
     // Constant empty arrays to reduce allocations
-    private static final String[] EMPTY_STRING_ARRAY = new String[0];
+    protected static final String[] EMPTY_STRING_ARRAY = new String[0];
     protected static final GlideString[] EMPTY_GLIDE_STRING_ARRAY = new GlideString[0];
 
     // Client components
@@ -486,7 +497,7 @@ public abstract class BaseClient
                             });
         } catch (Exception e) {
             // Something bad happened during initial setup
-            var future = new CompletableFuture<T>();
+            CompletableFuture<T> future = new CompletableFuture<>();
             future.completeExceptionally(e);
             return future;
         }
@@ -516,7 +527,9 @@ public abstract class BaseClient
         // We'll update this once the connection provides the native handle
         GlideCoreClient core =
                 new GlideCoreClient(
-                        connectionManager.getNativeClientHandle(), connectionManager.getMaxInflightRequests());
+                        connectionManager.getNativeClientHandle(),
+                        connectionManager.getMaxInflightRequests(),
+                        connectionManager.getRequestTimeoutMs());
         // Register for PubSub push delivery
         try {
             GlideCoreClient.registerClient(connectionManager.getNativeClientHandle(), null);
@@ -679,7 +692,7 @@ public abstract class BaseClient
     }
 
     protected byte[] handleBytesOrNullResponse(Response response) throws GlideException {
-        var result =
+        GlideString result =
                 handleValkeyResponse(GlideString.class, EnumSet.of(ResponseFlags.IS_NULLABLE), response);
         if (result == null) return null;
 
@@ -780,6 +793,30 @@ public abstract class BaseClient
 
     /**
      * @param response A Protobuf response
+     * @return A map of <code>String</code> to <code>String[]</code>
+     */
+    @SuppressWarnings("unchecked") // raw Map cast to Map<String, Object[]>
+    protected Map<String, String[]> handleMapOfArraysResponse(Response response)
+            throws GlideException {
+        Map<String, Object[]> mapResponse =
+                handleValkeyResponse(Map.class, EnumSet.of(ResponseFlags.ENCODING_UTF8), response);
+        return castMapOfArrays(mapResponse, String.class);
+    }
+
+    /**
+     * @param response A Protobuf response
+     * @return A map of <code>String</code> to <code>GlideString[]</code>
+     */
+    @SuppressWarnings("unchecked") // raw Map cast to Map<String, Object[]>
+    protected Map<String, GlideString[]> handleBinaryStringMapOfArraysResponse(Response response)
+            throws GlideException {
+        Map<String, Object[]> mapResponse =
+                handleValkeyResponse(Map.class, EnumSet.noneOf(ResponseFlags.class), response);
+        return castMapOfArrays(mapResponse, GlideString.class);
+    }
+
+    /**
+     * @param response A Protobuf response
      * @return A map of a map of <code>String[][]</code>
      */
     protected Map<String, Map<String, String[][]>> handleXReadResponse(Response response)
@@ -830,7 +867,7 @@ public abstract class BaseClient
         Map<String, Object>[] data = castArray(response, Map.class);
         for (Map<String, Object> libraryInfo : data) {
             Object[] functions = (Object[]) libraryInfo.get("functions");
-            var functionInfo = castArray(functions, Map.class);
+            Map<String, Object>[] functionInfo = castArray(functions, Map.class);
             libraryInfo.put("functions", functionInfo);
         }
         return data;
@@ -842,7 +879,7 @@ public abstract class BaseClient
         Map<GlideString, Object>[] data = castArray(response, Map.class);
         for (Map<GlideString, Object> libraryInfo : data) {
             Object[] functions = (Object[]) libraryInfo.get(gs("functions"));
-            var functionInfo = castArray(functions, Map.class);
+            Map<String, Object>[] functionInfo = castArray(functions, Map.class);
             libraryInfo.put(gs("functions"), functionInfo);
         }
         return data;
@@ -877,7 +914,7 @@ public abstract class BaseClient
             return ClusterValue.ofSingleValue(handleFunctionStatsResponse(handleMapResponse(response)));
         } else {
             Map<String, Map<String, Map<String, Object>>> data = handleMapResponse(response);
-            for (var nodeInfo : data.entrySet()) {
+            for (Map.Entry<String, Map<String, Map<String, Object>>> nodeInfo : data.entrySet()) {
                 nodeInfo.setValue(handleFunctionStatsResponse(nodeInfo.getValue()));
             }
             return ClusterValue.ofMultiValue(data);
@@ -893,7 +930,8 @@ public abstract class BaseClient
         } else {
             Map<GlideString, Map<GlideString, Map<GlideString, Object>>> data =
                     handleBinaryStringMapResponse(response);
-            for (var nodeInfo : data.entrySet()) {
+            for (Map.Entry<GlideString, Map<GlideString, Map<GlideString, Object>>> nodeInfo :
+                    data.entrySet()) {
                 nodeInfo.setValue(handleFunctionStatsBinaryResponse(nodeInfo.getValue()));
             }
             return ClusterValue.ofMultiValueBinary(data);
@@ -2429,10 +2467,16 @@ public abstract class BaseClient
     public CompletableFuture<Object> invokeScript(@NonNull Script script) {
         if (script.getBinaryOutput()) {
             return commandManager.submitScript(
-                    script, List.of(), List.of(), this::handleBinaryObjectOrNullResponse);
+                    script,
+                    Collections.emptyList(),
+                    Collections.emptyList(),
+                    this::handleBinaryObjectOrNullResponse);
         } else {
             return commandManager.submitScript(
-                    script, List.of(), List.of(), this::handleObjectOrNullResponse);
+                    script,
+                    Collections.emptyList(),
+                    Collections.emptyList(),
+                    this::handleObjectOrNullResponse);
         }
     }
 
@@ -2676,13 +2720,14 @@ public abstract class BaseClient
     @Override
     public CompletableFuture<Object[]> bzpopmin(@NonNull String[] keys, double timeout) {
         String[] arguments = ArrayUtils.add(keys, Double.toString(timeout));
-        return commandManager.submitNewCommand(BZPopMin, arguments, this::handleArrayOrNullResponse);
+        return commandManager.submitBlockingCommand(
+                BZPopMin, arguments, this::handleArrayOrNullResponse);
     }
 
     @Override
     public CompletableFuture<Object[]> bzpopmin(@NonNull GlideString[] keys, double timeout) {
         GlideString[] arguments = ArrayUtils.add(keys, gs(Double.toString(timeout)));
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BZPopMin, arguments, this::handleArrayOrNullResponseBinary);
     }
 
@@ -2714,13 +2759,14 @@ public abstract class BaseClient
     @Override
     public CompletableFuture<Object[]> bzpopmax(@NonNull String[] keys, double timeout) {
         String[] arguments = ArrayUtils.add(keys, Double.toString(timeout));
-        return commandManager.submitNewCommand(BZPopMax, arguments, this::handleArrayOrNullResponse);
+        return commandManager.submitBlockingCommand(
+                BZPopMax, arguments, this::handleArrayOrNullResponse);
     }
 
     @Override
     public CompletableFuture<Object[]> bzpopmax(@NonNull GlideString[] keys, double timeout) {
         GlideString[] arguments = ArrayUtils.add(keys, gs(Double.toString(timeout)));
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BZPopMax, arguments, this::handleArrayOrNullResponseBinary);
     }
 
@@ -3347,6 +3393,9 @@ public abstract class BaseClient
     public CompletableFuture<Map<String, Map<String, String[][]>>> xread(
             @NonNull Map<String, String> keysAndIds, @NonNull StreamReadOptions options) {
         String[] arguments = options.toArgs(keysAndIds);
+        if (options.isBlocking()) {
+            return commandManager.submitBlockingCommand(XRead, arguments, this::handleXReadResponse);
+        }
         return commandManager.submitNewCommand(XRead, arguments, this::handleXReadResponse);
     }
 
@@ -3354,6 +3403,10 @@ public abstract class BaseClient
     public CompletableFuture<Map<GlideString, Map<GlideString, GlideString[][]>>> xreadBinary(
             @NonNull Map<GlideString, GlideString> keysAndIds, @NonNull StreamReadOptions options) {
         GlideString[] arguments = options.toArgsBinary(keysAndIds);
+        if (options.isBlocking()) {
+            return commandManager.submitBlockingCommand(
+                    XRead, arguments, this::handleXReadResponseBinary);
+        }
         return commandManager.submitNewCommand(XRead, arguments, this::handleXReadResponseBinary);
     }
 
@@ -3623,6 +3676,9 @@ public abstract class BaseClient
             @NonNull String consumer,
             @NonNull StreamReadGroupOptions options) {
         String[] arguments = options.toArgs(group, consumer, keysAndIds);
+        if (options.isBlocking()) {
+            return commandManager.submitBlockingCommand(XReadGroup, arguments, this::handleXReadResponse);
+        }
         return commandManager.submitNewCommand(XReadGroup, arguments, this::handleXReadResponse);
     }
 
@@ -3633,6 +3689,10 @@ public abstract class BaseClient
             @NonNull GlideString consumer,
             @NonNull StreamReadGroupOptions options) {
         GlideString[] arguments = options.toArgsBinary(group, consumer, keysAndIds);
+        if (options.isBlocking()) {
+            return commandManager.submitBlockingCommand(
+                    XReadGroup, arguments, this::handleXReadResponseBinary);
+        }
         return commandManager.submitNewCommand(XReadGroup, arguments, this::handleXReadResponseBinary);
     }
 
@@ -4115,14 +4175,14 @@ public abstract class BaseClient
     @Override
     public CompletableFuture<String[]> blpop(@NonNull String[] keys, double timeout) {
         String[] arguments = ArrayUtils.add(keys, Double.toString(timeout));
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BLPop, arguments, response -> castArray(handleArrayOrNullResponse(response), String.class));
     }
 
     @Override
     public CompletableFuture<GlideString[]> blpop(@NonNull GlideString[] keys, double timeout) {
         GlideString[] arguments = ArrayUtils.add(keys, gs(Double.toString(timeout)));
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BLPop,
                 arguments,
                 response -> castArray(handleArrayOrNullResponseBinary(response), GlideString.class));
@@ -4131,14 +4191,14 @@ public abstract class BaseClient
     @Override
     public CompletableFuture<String[]> brpop(@NonNull String[] keys, double timeout) {
         String[] arguments = ArrayUtils.add(keys, Double.toString(timeout));
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BRPop, arguments, response -> castArray(handleArrayOrNullResponse(response), String.class));
     }
 
     @Override
     public CompletableFuture<GlideString[]> brpop(@NonNull GlideString[] keys, double timeout) {
         GlideString[] arguments = ArrayUtils.add(keys, gs(Double.toString(timeout)));
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BRPop,
                 arguments,
                 response -> castArray(handleArrayOrNullResponseBinary(response), GlideString.class));
@@ -4297,7 +4357,7 @@ public abstract class BaseClient
                         new String[] {Double.toString(timeout), Integer.toString(keys.length)},
                         keys,
                         new String[] {modifier.toString()});
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BZMPop,
                 arguments,
                 response -> convertKeyValueArrayToMap(handleArrayOrNullResponse(response), Double.class));
@@ -4311,7 +4371,7 @@ public abstract class BaseClient
                         new GlideString[] {gs(Double.toString(timeout)), gs(Integer.toString(keys.length))},
                         keys,
                         new GlideString[] {gs(modifier.toString())});
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BZMPop,
                 arguments,
                 response ->
@@ -4327,7 +4387,7 @@ public abstract class BaseClient
                         new String[] {Double.toString(timeout), Integer.toString(keys.length)},
                         keys,
                         new String[] {modifier.toString(), COUNT_VALKEY_API, Long.toString(count)});
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BZMPop,
                 arguments,
                 response -> convertKeyValueArrayToMap(handleArrayOrNullResponse(response), Double.class));
@@ -4343,7 +4403,7 @@ public abstract class BaseClient
                         new GlideString[] {
                             gs(modifier.toString()), gs(COUNT_VALKEY_API), gs(Long.toString(count))
                         });
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BZMPop,
                 arguments,
                 response ->
@@ -4741,7 +4801,7 @@ public abstract class BaseClient
                         new String[] {Double.toString(timeout), Long.toString(keys.length)},
                         keys,
                         new String[] {direction.toString(), COUNT_FOR_LIST_VALKEY_API, Long.toString(count)});
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BLMPop,
                 arguments,
                 response -> castMapOfArrays(handleMapOrNullResponse(response), String.class));
@@ -4757,7 +4817,7 @@ public abstract class BaseClient
                         new GlideString[] {
                             gs(direction.toString()), gs(COUNT_FOR_LIST_VALKEY_API), gs(Long.toString(count))
                         });
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BLMPop,
                 arguments,
                 response ->
@@ -4773,7 +4833,7 @@ public abstract class BaseClient
                         new String[] {Double.toString(timeout), Long.toString(keys.length)},
                         keys,
                         new String[] {direction.toString()});
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BLMPop,
                 arguments,
                 response -> castMapOfArrays(handleMapOrNullResponse(response), String.class));
@@ -4787,7 +4847,7 @@ public abstract class BaseClient
                         new GlideString[] {gs(Double.toString(timeout)), gs(Long.toString(keys.length))},
                         keys,
                         new GlideString[] {gs(direction.toString())});
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BLMPop,
                 arguments,
                 response ->
@@ -4841,7 +4901,8 @@ public abstract class BaseClient
                 new String[] {
                     source, destination, wherefrom.toString(), whereto.toString(), Double.toString(timeout)
                 };
-        return commandManager.submitNewCommand(BLMove, arguments, this::handleStringOrNullResponse);
+        return commandManager.submitBlockingCommand(
+                BLMove, arguments, this::handleStringOrNullResponse);
     }
 
     @Override
@@ -4859,7 +4920,7 @@ public abstract class BaseClient
                     gs(whereto.toString()),
                     gs(Double.toString(timeout))
                 };
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 BLMove, arguments, this::handleGlideStringOrNullResponse);
     }
 
@@ -5405,15 +5466,15 @@ public abstract class BaseClient
         if (o instanceof byte[]) {
             o = GlideString.of((byte[]) o);
         } else if (o.getClass().isArray()) {
-            var array = (Object[]) o;
-            for (var i = 0; i < array.length; i++) {
+            Object[] array = (Object[]) o;
+            for (int i = 0; i < array.length; i++) {
                 array[i] = convertByteArrayToGlideString(array[i]);
             }
         } else if (o instanceof Set) {
-            var set = (Set<?>) o;
+            Set<?> set = (Set<?>) o;
             o = set.stream().map(this::convertByteArrayToGlideString).collect(Collectors.toSet());
         } else if (o instanceof Map) {
-            var map = (Map<?, ?>) o;
+            Map<?, ?> map = (Map<?, ?>) o;
             o =
                     map.entrySet().stream()
                             .collect(
@@ -6028,10 +6089,94 @@ public abstract class BaseClient
 
     @Override
     public CompletableFuture<Long> wait(long numreplicas, long timeout) {
-        return commandManager.submitNewCommand(
+        return commandManager.submitBlockingCommand(
                 Wait,
                 new String[] {Long.toString(numreplicas), Long.toString(timeout)},
                 this::handleLongResponse);
+    }
+
+    @Override
+    public CompletableFuture<Long[]> waitaof(long numlocal, long numreplicas, long timeout) {
+        return commandManager.submitBlockingCommand(
+                WaitAof,
+                new String[] {Long.toString(numlocal), Long.toString(numreplicas), Long.toString(timeout)},
+                response -> castArray(handleArrayResponse(response), Long.class));
+    }
+
+    @Override
+    public CompletableFuture<String> migrate(
+            String destinationHost, long destinationPort, String key, long destinationDB, long timeout) {
+        return commandManager.submitNewCommand(
+                Migrate,
+                new String[] {
+                    destinationHost,
+                    Long.toString(destinationPort),
+                    key,
+                    Long.toString(destinationDB),
+                    Long.toString(timeout)
+                },
+                this::handleStringResponse);
+    }
+
+    @Override
+    public CompletableFuture<String> migrate(
+            String destinationHost,
+            long destinationPort,
+            GlideString key,
+            long destinationDB,
+            long timeout) {
+        return commandManager.submitNewCommand(
+                Migrate,
+                new ArgsBuilder()
+                        .add(destinationHost)
+                        .add(destinationPort)
+                        .add(key)
+                        .add(destinationDB)
+                        .add(timeout)
+                        .toArray(),
+                this::handleStringResponse);
+    }
+
+    @Override
+    public CompletableFuture<String> migrate(
+            String destinationHost,
+            long destinationPort,
+            String key,
+            long destinationDB,
+            long timeout,
+            MigrateOptions migrateOptions) {
+        return commandManager.submitNewCommand(
+                Migrate,
+                new ArgsBuilder()
+                        .add(destinationHost)
+                        .add(Long.toString(destinationPort))
+                        .add(key)
+                        .add(Long.toString(destinationDB))
+                        .add(Long.toString(timeout))
+                        .add(migrateOptions.toArgs())
+                        .toArray(),
+                this::handleStringResponse);
+    }
+
+    @Override
+    public CompletableFuture<String> migrate(
+            String destinationHost,
+            long destinationPort,
+            GlideString key,
+            long destinationDB,
+            long timeout,
+            MigrateOptions migrateOptions) {
+        return commandManager.submitNewCommand(
+                Migrate,
+                new ArgsBuilder()
+                        .add(destinationHost)
+                        .add(destinationPort)
+                        .add(key)
+                        .add(destinationDB)
+                        .add(timeout)
+                        .add(migrateOptions.toArgs())
+                        .toArray(),
+                this::handleStringResponse);
     }
 
     public CompletableFuture<String[]> aclCat() {
@@ -6111,6 +6256,123 @@ public abstract class BaseClient
     public CompletableFuture<String> aclWhoami() {
         return commandManager.submitNewCommand(
                 AclWhoami, EMPTY_STRING_ARRAY, this::handleStringResponse);
+    }
+
+    public CompletableFuture<Void> subscribeLazy(Set<String> channels) {
+        return commandManager.submitNewCommand(
+                Subscribe, channels.toArray(EMPTY_STRING_ARRAY), response -> null);
+    }
+
+    public CompletableFuture<Void> subscribe(Set<String> channels, int timeoutMs) {
+        if (timeoutMs < 0) {
+            throw new IllegalArgumentException("Timeout must be non-negative, got: " + timeoutMs);
+        }
+        String[] args = new String[channels.size() + 1];
+        int i = 0;
+        for (String channel : channels) {
+            args[i++] = channel;
+        }
+        args[i] = String.valueOf(timeoutMs);
+        return commandManager.submitNewCommand(SubscribeBlocking, args, response -> null);
+    }
+
+    public CompletableFuture<Void> psubscribeLazy(Set<String> patterns) {
+        return commandManager.submitNewCommand(
+                PSubscribe, patterns.toArray(EMPTY_STRING_ARRAY), response -> null);
+    }
+
+    public CompletableFuture<Void> psubscribe(Set<String> patterns, int timeoutMs) {
+        if (timeoutMs < 0) {
+            throw new IllegalArgumentException("Timeout must be non-negative, got: " + timeoutMs);
+        }
+        String[] args = new String[patterns.size() + 1];
+        int i = 0;
+        for (String pattern : patterns) {
+            args[i++] = pattern;
+        }
+        args[i] = String.valueOf(timeoutMs);
+        return commandManager.submitNewCommand(PSubscribeBlocking, args, response -> null);
+    }
+
+    public CompletableFuture<Void> unsubscribeLazy() {
+        return commandManager.submitNewCommand(Unsubscribe, EMPTY_STRING_ARRAY, response -> null);
+    }
+
+    public CompletableFuture<Void> unsubscribeLazy(Set<String> channels) {
+        return commandManager.submitNewCommand(
+                Unsubscribe, channels.toArray(EMPTY_STRING_ARRAY), response -> null);
+    }
+
+    public CompletableFuture<Void> unsubscribe(Set<String> channels, int timeoutMs) {
+        if (timeoutMs < 0) {
+            throw new IllegalArgumentException("Timeout must be non-negative, got: " + timeoutMs);
+        }
+        String[] args = new String[channels.size() + 1];
+        int i = 0;
+        for (String channel : channels) {
+            args[i++] = channel;
+        }
+        args[i] = String.valueOf(timeoutMs);
+        return commandManager.submitNewCommand(UnsubscribeBlocking, args, response -> null);
+    }
+
+    public CompletableFuture<Void> unsubscribe(int timeoutMs) {
+        if (timeoutMs < 0) {
+            throw new IllegalArgumentException("Timeout must be non-negative, got: " + timeoutMs);
+        }
+        return commandManager.submitNewCommand(
+                UnsubscribeBlocking, new String[] {String.valueOf(timeoutMs)}, response -> null);
+    }
+
+    public CompletableFuture<Void> punsubscribeLazy() {
+        return commandManager.submitNewCommand(PUnsubscribe, EMPTY_STRING_ARRAY, response -> null);
+    }
+
+    public CompletableFuture<Void> punsubscribeLazy(Set<String> patterns) {
+        return commandManager.submitNewCommand(
+                PUnsubscribe, patterns.toArray(EMPTY_STRING_ARRAY), response -> null);
+    }
+
+    public CompletableFuture<Void> punsubscribe(Set<String> patterns, int timeoutMs) {
+        if (timeoutMs < 0) {
+            throw new IllegalArgumentException("Timeout must be non-negative, got: " + timeoutMs);
+        }
+        String[] args = new String[patterns.size() + 1];
+        int i = 0;
+        for (String pattern : patterns) {
+            args[i++] = pattern;
+        }
+        args[i] = String.valueOf(timeoutMs);
+        return commandManager.submitNewCommand(PUnsubscribeBlocking, args, response -> null);
+    }
+
+    public CompletableFuture<Void> punsubscribe(int timeoutMs) {
+        if (timeoutMs < 0) {
+            throw new IllegalArgumentException("Timeout must be non-negative, got: " + timeoutMs);
+        }
+        return commandManager.submitNewCommand(
+                PUnsubscribeBlocking, new String[] {String.valueOf(timeoutMs)}, response -> null);
+    }
+
+    protected Object parseSubscriptionState(Object response) {
+        if (!(response instanceof Object[])) {
+            throw new RuntimeException(
+                    "Invalid response format from GetSubscriptions: expected Object[], got "
+                            + (response == null ? "null" : response.getClass().getName()));
+        }
+        Object[] arr = (Object[]) response;
+        if (arr.length != 4) {
+            throw new RuntimeException(
+                    "Invalid response format from GetSubscriptions: expected array length 4, got "
+                            + arr.length);
+        }
+
+        @SuppressWarnings("unchecked")
+        Map<String, Object[]> desiredMap = (Map<String, Object[]>) arr[1];
+        @SuppressWarnings("unchecked")
+        Map<String, Object[]> actualMap = (Map<String, Object[]>) arr[3];
+
+        return new Object[] {desiredMap, actualMap};
     }
 
     /**
