@@ -22,12 +22,12 @@ import glide.api.models.commands.InfoOptions;
 import glide.api.models.configuration.*;
 import glide.api.models.exceptions.ClosingException;
 import glide.cluster.ValkeyCluster;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Stream;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
@@ -43,7 +43,7 @@ public class ConnectionTests {
     @EnumSource(ProtocolVersion.class)
     @SneakyThrows
     public void basic_client(ProtocolVersion protocol) {
-        var regularClient =
+        GlideClient regularClient =
                 GlideClient.createClient(commonClientConfig().protocol(protocol).build()).get();
         regularClient.close();
     }
@@ -52,7 +52,7 @@ public class ConnectionTests {
     @EnumSource(ProtocolVersion.class)
     @SneakyThrows
     public void cluster_client(ProtocolVersion protocol) {
-        var clusterClient =
+        GlideClusterClient clusterClient =
                 GlideClusterClient.createClient(commonClusterClientConfig().protocol(protocol).build())
                         .get();
         clusterClient.close();
@@ -81,7 +81,7 @@ public class ConnectionTests {
             int requestTimeout,
             BackoffStrategy backoffStrategy) {
         if (clusterMode) {
-            var advancedConfiguration =
+            AdvancedGlideClusterClientConfiguration advancedConfiguration =
                     AdvancedGlideClusterClientConfiguration.builder()
                             .connectionTimeout(connectionTimeout)
                             .build();
@@ -92,7 +92,7 @@ public class ConnectionTests {
                                     .build())
                     .get();
         }
-        var advancedConfiguration =
+        AdvancedGlideClientConfiguration advancedConfiguration =
                 AdvancedGlideClientConfiguration.builder().connectionTimeout(connectionTimeout).build();
         return GlideClient.createClient(
                         commonClientConfig()
@@ -106,7 +106,7 @@ public class ConnectionTests {
     @SneakyThrows
     public BaseClient createClientWithTLSMode(boolean isCluster, boolean useInsecureTLS) {
         if (isCluster) {
-            var advancedConfiguration =
+            AdvancedGlideClusterClientConfiguration advancedConfiguration =
                     AdvancedGlideClusterClientConfiguration.builder()
                             .tlsAdvancedConfiguration(
                                     TlsAdvancedConfiguration.builder().useInsecureTLS(useInsecureTLS).build())
@@ -115,7 +115,7 @@ public class ConnectionTests {
                             commonClusterClientConfig().advancedConfiguration(advancedConfiguration).build())
                     .get();
         }
-        var advancedConfiguration =
+        AdvancedGlideClientConfiguration advancedConfiguration =
                 AdvancedGlideClientConfiguration.builder()
                         .tlsAdvancedConfiguration(
                                 TlsAdvancedConfiguration.builder().useInsecureTLS(useInsecureTLS).build())
@@ -142,25 +142,14 @@ public class ConnectionTests {
         assertEquals(configSetClient.configResetStat().get(), OK);
 
         // Get Replica Count for current cluster
-        var clusterInfo =
-                configSetClient
-                        .customCommand(
-                                new String[] {"INFO", "REPLICATION"},
-                                new RequestRoutingConfiguration.SlotKeyRoute("key", PRIMARY))
-                        .get();
         long nReplicas =
-                Long.parseLong(
-                        Stream.of(((String) clusterInfo.getSingleValue()).split("\\R"))
-                                .map(line -> line.split(":", 2))
-                                .filter(parts -> parts.length == 2 && parts[0].trim().equals("connected_slaves"))
-                                .map(parts -> parts[1].trim())
-                                .findFirst()
-                                .get());
+                getReplicaCount(
+                        configSetClient, new RequestRoutingConfiguration.SlotKeyRoute("key", PRIMARY));
         long nGetCalls = 3 * nReplicas;
         String getCmdstat = String.format("cmdstat_get:calls=%d", 3);
 
         // Setting AZ for all Nodes
-        configSetClient.configSet(Map.of("availability-zone", az), ALL_NODES).get();
+        configSetClient.configSet(Collections.singletonMap("availability-zone", az), ALL_NODES).get();
         configSetClient.close();
 
         // Creating Client with AZ configuration for testing
@@ -170,7 +159,7 @@ public class ConnectionTests {
         Map<String, Map<String, String>> azData = azGetResult.getMultiValue();
 
         // Check that all replicas have the availability zone set to the az
-        for (var entry : azData.entrySet()) {
+        for (Map.Entry<String, Map<String, String>> entry : azData.entrySet()) {
             assertEquals(az, entry.getValue().get("availability-zone"));
         }
 
@@ -209,7 +198,7 @@ public class ConnectionTests {
                 GlideClusterClient.createClient(azClusterClientConfig().requestTimeout(2000).build()).get();
 
         // reset availability zone for all nodes
-        configSetClient.configSet(Map.of("availability-zone", ""), ALL_NODES).get();
+        configSetClient.configSet(Collections.singletonMap("availability-zone", ""), ALL_NODES).get();
         assertEquals(configSetClient.configResetStat().get(), OK);
 
         Long fooSlotKey =
@@ -221,7 +210,7 @@ public class ConnectionTests {
         int convertedKey = Integer.parseInt(fooSlotKey.toString());
         configSetClient
                 .configSet(
-                        Map.of("availability-zone", az),
+                        Collections.singletonMap("availability-zone", az),
                         new RequestRoutingConfiguration.SlotIdRoute(convertedKey, REPLICA))
                 .get();
         configSetClient.close();
@@ -272,7 +261,14 @@ public class ConnectionTests {
         //  We expect the calls to be distributed evenly among the replicas
         long matchingEntries =
                 infoData.values().stream().filter(value -> value.contains(getCmdstat)).count();
-        assertEquals(4, matchingEntries);
+        // TODO: Remove the override after fixing Windows Replicas issues
+        // https://github.com/valkey-io/valkey-glide/issues/5210
+        long expectedReplicas = 4;
+        if (isWindows()) {
+            expectedReplicas = 0;
+        }
+
+        assertEquals(expectedReplicas, matchingEntries);
         azTestClient.close();
     }
 
@@ -280,9 +276,9 @@ public class ConnectionTests {
     @ParameterizedTest
     @ValueSource(booleans = {true, false})
     public void test_connection_timeout(boolean clusterMode) {
-        var backoffStrategy =
+        BackoffStrategy backoffStrategy =
                 BackoffStrategy.builder().exponentBase(2).factor(100).numOfRetries(1).build();
-        var client = createConnectionTimeoutClient(clusterMode, 250, 20000, backoffStrategy);
+        BaseClient client = createConnectionTimeoutClient(clusterMode, 250, 20000, backoffStrategy);
 
         // Runnable for long-running DEBUG SLEEP command
         Runnable debugSleepTask =
@@ -322,7 +318,7 @@ public class ConnectionTests {
                 () -> {
                     try {
                         Thread.sleep(1000); // Wait to ensure the debug sleep command is running
-                        var timeoutClient =
+                        BaseClient timeoutClient =
                                 createConnectionTimeoutClient(clusterMode, 10000, 250, backoffStrategy);
                         assertEquals(timeoutClient.set("key", "value").get(), "OK");
                         timeoutClient.close();
@@ -335,7 +331,7 @@ public class ConnectionTests {
         ExecutorService executorService = Executors.newFixedThreadPool(3);
         try {
             executorService.invokeAll(
-                    List.of(
+                    Arrays.asList(
                             Executors.callable(debugSleepTask),
                             Executors.callable(failToConnectTask),
                             Executors.callable(connectToClientTask)));
@@ -364,12 +360,14 @@ public class ConnectionTests {
 
         // Reset stats and set all nodes to other_az
         assertEquals(configSetClient.configResetStat().get(), OK);
-        configSetClient.configSet(Map.of("availability-zone", otherAz), ALL_NODES).get();
+        configSetClient
+                .configSet(Collections.singletonMap("availability-zone", otherAz), ALL_NODES)
+                .get();
 
         // Set primary for slot 12182 to az
         configSetClient
                 .configSet(
-                        Map.of("availability-zone", az),
+                        Collections.singletonMap("availability-zone", az),
                         new RequestRoutingConfiguration.SlotIdRoute(12182, PRIMARY))
                 .get();
 
@@ -522,6 +520,13 @@ public class ConnectionTests {
     @Test
     public void test_az_affinity_replicas_and_primary_prioritizes_replicas_over_primary() {
         assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("8.0.0"), "Skip for versions below 8");
+        // Windows integration tests has replicas set to zero. This is set because of the resource
+        // limitation
+        // on Github Action using Windows runner with WSL, which is making the server with replicas hang
+        // and not be fully initialized
+        // TODO: Remove the skip after fixing Windows Replicas issues
+        // https://github.com/valkey-io/valkey-glide/issues/5210
+        assumeTrue(!isWindows(), "Skip on Windows");
 
         String clientAz = "us-east-1b"; // Client is in 1B
         String otherAz = "us-east-1a"; // Other nodes in 1A
@@ -537,12 +542,14 @@ public class ConnectionTests {
         assertEquals(configSetClient.configResetStat().get(), OK);
 
         // Set ALL nodes to otherAz (us-east-1a)
-        configSetClient.configSet(Map.of("availability-zone", otherAz), ALL_NODES).get();
+        configSetClient
+                .configSet(Collections.singletonMap("availability-zone", otherAz), ALL_NODES)
+                .get();
 
         // Set REPLICA for slot to clientAz (us-east-1b)
         configSetClient
                 .configSet(
-                        Map.of("availability-zone", clientAz),
+                        Collections.singletonMap("availability-zone", clientAz),
                         new RequestRoutingConfiguration.SlotIdRoute(slot, REPLICA))
                 .get();
 
@@ -785,12 +792,68 @@ public class ConnectionTests {
     }
 
     @Test
+    public void testPeriodicChecksDefault() {
+        // Test that periodicChecks defaults to ENABLED_DEFAULT_CONFIGS when not specified
+        AdvancedGlideClusterClientConfiguration config =
+                AdvancedGlideClusterClientConfiguration.builder().build();
+        assertEquals(PeriodicChecksStatus.ENABLED_DEFAULT_CONFIGS, config.getPeriodicChecks());
+    }
+
+    @Test
+    public void testPeriodicChecksDisabled() {
+        // Test that periodicChecks can be set to DISABLED
+        AdvancedGlideClusterClientConfiguration config =
+                AdvancedGlideClusterClientConfiguration.builder()
+                        .periodicChecks(PeriodicChecksStatus.DISABLED)
+                        .build();
+        assertEquals(PeriodicChecksStatus.DISABLED, config.getPeriodicChecks());
+    }
+
+    @Test
+    public void testPeriodicChecksEnabledExplicitly() {
+        // Test that periodicChecks can be explicitly set to ENABLED_DEFAULT_CONFIGS
+        AdvancedGlideClusterClientConfiguration config =
+                AdvancedGlideClusterClientConfiguration.builder()
+                        .periodicChecks(PeriodicChecksStatus.ENABLED_DEFAULT_CONFIGS)
+                        .build();
+        assertEquals(PeriodicChecksStatus.ENABLED_DEFAULT_CONFIGS, config.getPeriodicChecks());
+    }
+
+    @Test
+    public void testPeriodicChecksManualInterval() {
+        // Test that periodicChecks can be set to a manual interval
+        int durationInSec = 30;
+        PeriodicChecksManualInterval manualInterval =
+                PeriodicChecksManualInterval.builder().durationInSec(durationInSec).build();
+
+        AdvancedGlideClusterClientConfiguration config =
+                AdvancedGlideClusterClientConfiguration.builder().periodicChecks(manualInterval).build();
+
+        assertInstanceOf(PeriodicChecksManualInterval.class, config.getPeriodicChecks());
+        assertEquals(
+                durationInSec,
+                ((PeriodicChecksManualInterval) config.getPeriodicChecks()).getDurationInSec());
+    }
+
+    @Test
+    public void testPeriodicChecksManualIntervalValue() {
+        // Test that PeriodicChecksManualInterval stores the correct duration value
+        int durationInSec = 60;
+        PeriodicChecksManualInterval manualInterval =
+                PeriodicChecksManualInterval.builder().durationInSec(durationInSec).build();
+
+        assertEquals(durationInSec, manualInterval.getDurationInSec());
+    }
+
+    @Test
     public void test_tcp_nodelay_default_value() {
         // Verify default is null (not set)
-        var standaloneConfig = AdvancedGlideClientConfiguration.builder().build();
+        AdvancedGlideClientConfiguration standaloneConfig =
+                AdvancedGlideClientConfiguration.builder().build();
         assertEquals(null, standaloneConfig.getTcpNoDelay());
 
-        var clusterConfig = AdvancedGlideClusterClientConfiguration.builder().build();
+        AdvancedGlideClusterClientConfiguration clusterConfig =
+                AdvancedGlideClusterClientConfiguration.builder().build();
         assertEquals(null, clusterConfig.getTcpNoDelay());
     }
 
@@ -815,7 +878,7 @@ public class ConnectionTests {
         // Test explicit true
         BaseClient clientTrue;
         if (clusterMode) {
-            var advancedConfig =
+            AdvancedGlideClusterClientConfiguration advancedConfig =
                     AdvancedGlideClusterClientConfiguration.builder().tcpNoDelay(true).build();
             clientTrue =
                     GlideClusterClient.createClient(
@@ -823,7 +886,8 @@ public class ConnectionTests {
                             .get();
             assertEquals("PONG", ((GlideClusterClient) clientTrue).ping().get());
         } else {
-            var advancedConfig = AdvancedGlideClientConfiguration.builder().tcpNoDelay(true).build();
+            AdvancedGlideClientConfiguration advancedConfig =
+                    AdvancedGlideClientConfiguration.builder().tcpNoDelay(true).build();
             clientTrue =
                     GlideClient.createClient(
                                     commonClientConfig().advancedConfiguration(advancedConfig).build())
@@ -837,7 +901,7 @@ public class ConnectionTests {
         // Test explicit false
         BaseClient clientFalse;
         if (clusterMode) {
-            var advancedConfig =
+            AdvancedGlideClusterClientConfiguration advancedConfig =
                     AdvancedGlideClusterClientConfiguration.builder().tcpNoDelay(false).build();
             clientFalse =
                     GlideClusterClient.createClient(
@@ -845,7 +909,8 @@ public class ConnectionTests {
                             .get();
             assertEquals("PONG", ((GlideClusterClient) clientFalse).ping().get());
         } else {
-            var advancedConfig = AdvancedGlideClientConfiguration.builder().tcpNoDelay(false).build();
+            AdvancedGlideClientConfiguration advancedConfig =
+                    AdvancedGlideClientConfiguration.builder().tcpNoDelay(false).build();
             clientFalse =
                     GlideClient.createClient(
                                     commonClientConfig().advancedConfiguration(advancedConfig).build())
