@@ -15,6 +15,8 @@ import static glide.api.models.commands.scan.ScanOptions.ObjectType.SET;
 import static glide.api.models.commands.scan.ScanOptions.ObjectType.STREAM;
 import static glide.api.models.commands.scan.ScanOptions.ObjectType.STRING;
 import static glide.api.models.commands.scan.ScanOptions.ObjectType.ZSET;
+import static glide.utils.Java8Utils.createMap;
+import static glide.utils.Java8Utils.repeat;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -24,7 +26,6 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
-import static org.junit.jupiter.api.Named.named;
 
 import glide.BatchTestUtilities.BatchBuilder;
 import glide.api.GlideClient;
@@ -39,35 +40,46 @@ import glide.api.models.configuration.ProtocolVersion;
 import glide.api.models.exceptions.RequestException;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Stream;
 import lombok.SneakyThrows;
 import org.apache.commons.lang3.ArrayUtils;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Named;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-@Timeout(10) // seconds
+@Timeout(20) // seconds
 public class BatchTests {
 
+    private static final List<Arguments> clients = new ArrayList<>();
+
+    @BeforeAll
     @SneakyThrows
-    public static Stream<Arguments> getClients() {
-        return Stream.of(
+    public static void init() {
+        clients.add(
                 Arguments.of(
-                        named(
+                        Named.of(
                                 "RESP2",
                                 GlideClient.createClient(
                                                 commonClientConfig()
                                                         .requestTimeout(7000)
                                                         .protocol(ProtocolVersion.RESP2)
                                                         .build())
-                                        .get())),
+                                        .get())));
+        clients.add(
                 Arguments.of(
-                        named(
+                        Named.of(
                                 "RESP3",
                                 GlideClient.createClient(
                                                 commonClientConfig()
@@ -77,7 +89,30 @@ public class BatchTests {
                                         .get())));
     }
 
-    @ParameterizedTest
+    @AfterAll
+    @SneakyThrows
+    @SuppressWarnings("unchecked")
+    public static void teardown() {
+        for (Arguments client : clients) {
+            ((Named<GlideClient>) client.get()[0]).getPayload().close();
+        }
+    }
+
+    @AfterEach
+    @SneakyThrows
+    @SuppressWarnings("unchecked")
+    public void cleanup() {
+        // Flush all databases to ensure clean state between tests
+        for (Arguments client : clients) {
+            ((Named<GlideClient>) client.get()[0]).getPayload().flushall().get();
+        }
+    }
+
+    public static Stream<Arguments> getClients() {
+        return clients.stream();
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void custom_command_info(GlideClient client, boolean isAtomic) {
@@ -86,7 +121,7 @@ public class BatchTests {
         assertTrue(((String) result[0]).contains("# Stats"));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void info_test(GlideClient client, boolean isAtomic) {
@@ -98,7 +133,7 @@ public class BatchTests {
         assertFalse(((String) result[1]).contains("# Stats"));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void ping_tests(GlideClient client, boolean isAtomic) {
@@ -198,7 +233,7 @@ public class BatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void test_batch_large_values(GlideClient client, boolean isAtomic) {
         // Skip on macOS - the macOS tests run on self hosted VMs which have resource limits
@@ -210,8 +245,8 @@ public class BatchTests {
         }
 
         int length = 1 << 25; // 33mb
-        String key = "0".repeat(length);
-        String value = "0".repeat(length);
+        String key = repeat("0", length);
+        String value = repeat("0", length);
 
         Batch batch = new Batch(isAtomic);
         batch.set(key, value);
@@ -228,7 +263,7 @@ public class BatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void test_standalone_batch(GlideClient client, boolean isAtomic) {
         String key = UUID.randomUUID().toString();
@@ -258,17 +293,17 @@ public class BatchTests {
         assertArrayEquals(expectedResult, result);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void lastsave(GlideClient client, boolean isAtomic) {
-        var yesterday = Instant.now().minus(1, ChronoUnit.DAYS);
+        Instant yesterday = Instant.now().minus(1, ChronoUnit.DAYS);
 
-        var response = client.exec(new Batch(isAtomic).lastsave(), true).get();
+        Object[] response = client.exec(new Batch(isAtomic).lastsave(), true).get();
         assertTrue(Instant.ofEpochSecond((long) response[0]).isAfter(yesterday));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void objectFreq(GlideClient client, boolean isAtomic) {
@@ -278,19 +313,19 @@ public class BatchTests {
         String oldPolicy = client.configGet(new String[] {maxmemoryPolicy}).get().get(maxmemoryPolicy);
         try {
             Batch batch = new Batch(isAtomic);
-            batch.configSet(Map.of(maxmemoryPolicy, "allkeys-lfu"));
+            batch.configSet(Collections.singletonMap(maxmemoryPolicy, "allkeys-lfu"));
             batch.set(objectFreqKey, "");
             batch.objectFreq(objectFreqKey);
-            var response = client.exec(batch, true).get();
+            Object[] response = client.exec(batch, true).get();
             assertEquals(OK, response[0]);
             assertEquals(OK, response[1]);
             assertTrue((long) response[2] >= 0L);
         } finally {
-            client.configSet(Map.of(maxmemoryPolicy, oldPolicy)).get();
+            client.configSet(Collections.singletonMap(maxmemoryPolicy, oldPolicy)).get();
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void objectIdletime(GlideClient client, boolean isAtomic) {
@@ -298,12 +333,12 @@ public class BatchTests {
         Batch batch = new Batch(isAtomic);
         batch.set(objectIdletimeKey, "");
         batch.objectIdletime(objectIdletimeKey);
-        var response = client.exec(batch, true).get();
+        Object[] response = client.exec(batch, true).get();
         assertEquals(OK, response[0]);
         assertTrue((long) response[1] >= 0L);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void objectRefcount(GlideClient client, boolean isAtomic) {
@@ -311,19 +346,19 @@ public class BatchTests {
         Batch batch = new Batch(isAtomic);
         batch.set(objectRefcountKey, "");
         batch.objectRefcount(objectRefcountKey);
-        var response = client.exec(batch, true).get();
+        Object[] response = client.exec(batch, true).get();
         assertEquals(OK, response[0]);
         assertTrue((long) response[1] >= 0L);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void zrank_zrevrank_withscores(GlideClient client, boolean isAtomic) {
         assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("7.2.0"));
         String zSetKey1 = "{key}:zsetKey1-" + UUID.randomUUID();
         Batch batch = new Batch(isAtomic);
-        batch.zadd(zSetKey1, Map.of("one", 1.0, "two", 2.0, "three", 3.0));
+        batch.zadd(zSetKey1, createMap("one", 1.0, "two", 2.0, "three", 3.0));
         batch.zrankWithScore(zSetKey1, "one");
         batch.zrevrankWithScore(zSetKey1, "one");
 
@@ -333,7 +368,7 @@ public class BatchTests {
         assertArrayEquals(new Object[] {2L, 1.0}, (Object[]) result[2]);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void copy(GlideClient client, boolean isAtomic) {
@@ -343,6 +378,7 @@ public class BatchTests {
         String copyKey2 = "{CopyKey}-2-" + UUID.randomUUID();
         Batch batch =
                 new Batch(isAtomic)
+                        .select(0) // Ensure we start in DB 0 (shared client may be in different DB)
                         .copy(copyKey1, copyKey2, 1, false)
                         .set(copyKey1, "one")
                         .set(copyKey2, "two")
@@ -355,6 +391,7 @@ public class BatchTests {
                         .get(copyKey2);
         Object[] expectedResult =
                 new Object[] {
+                    OK, // select(0)
                     false, // copy(copyKey1, copyKey2, 1, false)
                     OK, // set(copyKey1, "one")
                     OK, // set(copyKey2, "two")
@@ -367,11 +404,21 @@ public class BatchTests {
                     "one", // get(copyKey2)
                 };
 
-        Object[] result = client.exec(batch, true).get();
-        assertArrayEquals(expectedResult, result);
+        try {
+            Object[] result = client.exec(batch, true).get();
+            assertArrayEquals(expectedResult, result);
+        } finally {
+            // Cleanup: delete keys from DB 0, 1, 2 and switch back to DB 0
+            client.select(1).get();
+            client.del(new String[] {copyKey2}).get();
+            client.select(2).get();
+            client.del(new String[] {copyKey2}).get();
+            client.select(0).get();
+            client.del(new String[] {copyKey1, copyKey2}).get();
+        }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void watch(GlideClient client) {
@@ -427,7 +474,7 @@ public class BatchTests {
         assertInstanceOf(RequestException.class, executionException.getCause());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void watch_binary(GlideClient client) {
@@ -489,7 +536,7 @@ public class BatchTests {
         assertInstanceOf(RequestException.class, executionException.getCause());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void unwatch(GlideClient client) {
@@ -514,21 +561,21 @@ public class BatchTests {
         assertEquals(foobarString, client.get(key2).get());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void sort_and_sortReadOnly(GlideClient client, boolean isAtomic) {
         Batch batch1 = new Batch(isAtomic);
         Batch batch2 = new Batch(isAtomic);
-        var prefix = UUID.randomUUID();
+        UUID prefix = UUID.randomUUID();
         String genericKey1 = "{GenericKey}-1-" + prefix;
         String genericKey2 = "{GenericKey}-2-" + prefix;
         String[] ascendingListByAge = new String[] {"Bob", "Alice"};
         String[] descendingListByAge = new String[] {"Alice", "Bob"};
 
         batch1
-                .hset(prefix + "user:1", Map.of("name", "Alice", "age", "30"))
-                .hset(prefix + "user:2", Map.of("name", "Bob", "age", "25"))
+                .hset(prefix + "user:1", createMap("name", "Alice", "age", "30"))
+                .hset(prefix + "user:2", createMap("name", "Bob", "age", "25"))
                 .lpush(genericKey1, new String[] {"2", "1"})
                 .sort(
                         genericKey1,
@@ -561,7 +608,7 @@ public class BatchTests {
                                 .build())
                 .lrange(genericKey2, 0, -1);
 
-        var expectedResults =
+        Object[] expectedResults =
                 new Object[] {
                     2L, // hset(prefix + "user:1", ...);
                     2L, // hset(prefix + "user:2", ...);
@@ -603,7 +650,7 @@ public class BatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void waitTest(GlideClient client, boolean isAtomic) {
         // setup
@@ -626,13 +673,13 @@ public class BatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void scan_test(GlideClient client, boolean isAtomic) {
         assertEquals(OK, client.flushall().get());
         // setup
         String key = UUID.randomUUID().toString();
-        Map<String, String> msetMap = Map.of(key, UUID.randomUUID().toString());
+        Map<String, String> msetMap = Collections.singletonMap(key, UUID.randomUUID().toString());
         assertEquals(OK, client.mset(msetMap).get());
 
         String cursor = "0";
@@ -649,13 +696,13 @@ public class BatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void scan_binary_test(GlideClient client, boolean isAtomic) {
         assertEquals(OK, client.flushall().get());
         // setup
         String key = UUID.randomUUID().toString();
-        Map<String, String> msetMap = Map.of(key, UUID.randomUUID().toString());
+        Map<String, String> msetMap = Collections.singletonMap(key, UUID.randomUUID().toString());
         assertEquals(OK, client.mset(msetMap).get());
 
         GlideString cursor = gs("0");
@@ -672,7 +719,7 @@ public class BatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void scan_with_options_test(GlideClient client, boolean isAtomic) {
         assertEquals(OK, client.flushall().get());
@@ -680,7 +727,7 @@ public class BatchTests {
         Batch setupBatch = new Batch(isAtomic);
 
         Map<ScanOptions.ObjectType, String> typeKeys =
-                Map.of(
+                createMap(
                         STRING, "{string}-" + UUID.randomUUID(),
                         LIST, "{list}-" + UUID.randomUUID(),
                         SET, "{set}-" + UUID.randomUUID(),
@@ -691,14 +738,17 @@ public class BatchTests {
         setupBatch.set(typeKeys.get(STRING), UUID.randomUUID().toString());
         setupBatch.lpush(typeKeys.get(LIST), new String[] {UUID.randomUUID().toString()});
         setupBatch.sadd(typeKeys.get(SET), new String[] {UUID.randomUUID().toString()});
-        setupBatch.zadd(typeKeys.get(ZSET), Map.of(UUID.randomUUID().toString(), 1.0));
+        setupBatch.zadd(
+                typeKeys.get(ZSET), Collections.singletonMap(UUID.randomUUID().toString(), 1.0));
         setupBatch.hset(
-                typeKeys.get(HASH), Map.of(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
+                typeKeys.get(HASH),
+                Collections.singletonMap(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
         setupBatch.xadd(
-                typeKeys.get(STREAM), Map.of(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
+                typeKeys.get(STREAM),
+                Collections.singletonMap(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
         assertNotNull(client.exec(setupBatch, true).get());
 
-        for (var type : ScanOptions.ObjectType.values()) {
+        for (ScanOptions.ObjectType type : ScanOptions.ObjectType.values()) {
             ScanOptions options = ScanOptions.builder().type(type).count(99L).build();
 
             String cursor = "0";
@@ -733,7 +783,7 @@ public class BatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void scan_binary_with_options_test(GlideClient client, boolean isAtomic) {
         assertEquals(OK, client.flushall().get());
@@ -741,7 +791,7 @@ public class BatchTests {
         Batch setupBatch = new Batch(isAtomic).withBinaryOutput();
 
         Map<ScanOptions.ObjectType, GlideString> typeKeys =
-                Map.of(
+                createMap(
                         STRING, gs("{string}-" + UUID.randomUUID()),
                         LIST, gs("{list}-" + UUID.randomUUID()),
                         SET, gs("{set}-" + UUID.randomUUID()),
@@ -752,16 +802,19 @@ public class BatchTests {
         setupBatch.set(typeKeys.get(STRING), UUID.randomUUID().toString());
         setupBatch.lpush(typeKeys.get(LIST), new String[] {UUID.randomUUID().toString()});
         setupBatch.sadd(typeKeys.get(SET), new String[] {UUID.randomUUID().toString()});
-        setupBatch.zadd(typeKeys.get(ZSET), Map.of(UUID.randomUUID().toString(), 1.0));
+        setupBatch.zadd(
+                typeKeys.get(ZSET), Collections.singletonMap(UUID.randomUUID().toString(), 1.0));
         setupBatch.hset(
-                typeKeys.get(HASH), Map.of(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
+                typeKeys.get(HASH),
+                Collections.singletonMap(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
         setupBatch.xadd(
-                typeKeys.get(STREAM), Map.of(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
+                typeKeys.get(STREAM),
+                Collections.singletonMap(UUID.randomUUID().toString(), UUID.randomUUID().toString()));
         assertNotNull(client.exec(setupBatch, true).get());
 
         final GlideString initialCursor = gs("0");
 
-        for (var type : ScanOptions.ObjectType.values()) {
+        for (ScanOptions.ObjectType type : ScanOptions.ObjectType.values()) {
             ScanOptions options = ScanOptions.builder().type(type).count(99L).build();
 
             GlideString cursor = initialCursor;
@@ -796,7 +849,7 @@ public class BatchTests {
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void test_batch_dump_restore(GlideClient client, boolean isAtomic) {
@@ -821,14 +874,15 @@ public class BatchTests {
         assertEquals(value, response[1]);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void test_batch_function_dump_restore(GlideClient client, boolean isAtomic) {
         assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("7.0.0"));
         String libName = "mylib";
         String funcName = "myfun";
-        String code = generateLuaLibCode(libName, Map.of(funcName, "return args[1]"), true);
+        String code =
+                generateLuaLibCode(libName, Collections.singletonMap(funcName, "return args[1]"), true);
 
         // Setup
         client.functionLoad(code, true).get();
@@ -845,14 +899,14 @@ public class BatchTests {
         assertEquals(OK, response[0]);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void test_batch_xinfoStream(GlideClient client, boolean isAtomic) {
         Batch batch = new Batch(isAtomic);
         final String streamKey = "{streamKey}-" + UUID.randomUUID();
         LinkedHashMap<String, Object> expectedStreamInfo =
-                new LinkedHashMap<>() {
+                new LinkedHashMap<String, Object>() {
                     {
                         put("radix-tree-keys", 1L);
                         put("radix-tree-nodes", 2L);
@@ -864,7 +918,7 @@ public class BatchTests {
                     }
                 };
         LinkedHashMap<String, Object> expectedStreamFullInfo =
-                new LinkedHashMap<>() {
+                new LinkedHashMap<String, Object>() {
                     {
                         put("radix-tree-keys", 1L);
                         put("radix-tree-nodes", 2L);
@@ -876,7 +930,10 @@ public class BatchTests {
                 };
 
         batch
-                .xadd(streamKey, Map.of("field1", "value1"), StreamAddOptions.builder().id("0-1").build())
+                .xadd(
+                        streamKey,
+                        Collections.singletonMap("field1", "value1"),
+                        StreamAddOptions.builder().id("0-1").build())
                 .xinfoStream(streamKey)
                 .xinfoStreamFull(streamKey);
 
@@ -893,7 +950,8 @@ public class BatchTests {
 
         assertDeepEquals(
                 new Object[] {
-                    "0-1", // xadd(streamKey, Map.of("field1", "value1"), ... .id("0-1").build());
+                    "0-1", // xadd(streamKey, Collections.singletonMap("field1", "value1"), ...
+                    // .id("0-1").build());
                     expectedStreamInfo, // xinfoStream(streamKey)
                     expectedStreamFullInfo, // xinfoStreamFull(streamKey)
                 },
@@ -901,17 +959,17 @@ public class BatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void binary_strings(GlideClient client, boolean isAtomic) {
         String key = UUID.randomUUID().toString();
         client.set(key, "_").get();
         // use dump to ensure that we have non-string convertible bytes
-        var bytes = client.dump(gs(key)).get();
+        byte[] bytes = client.dump(gs(key)).get();
 
-        var batch = new Batch(isAtomic).withBinaryOutput().set(gs(key), gs(bytes)).get(gs(key));
+        Batch batch = new Batch(isAtomic).withBinaryOutput().set(gs(key), gs(bytes)).get(gs(key));
 
-        var responses = client.exec(batch, true).get();
+        Object[] responses = client.exec(batch, true).get();
 
         assertDeepEquals(
                 new Object[] {
